# navi-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  agent.py  bot.py  config.py  docker-compose.yml  init_memory.py  pyproject.toml
.github/workflows/: test.yml
memory/: engine.py  github_store.py  indexer.py  models.py
prompts/: memory_context.md  system.md
sessions/: manager.py
skills/: base.py  loader.py  registry.py
skills/builtin/: summarize.py  translate.py
tests/: conftest.py  test_agent.py  test_bot.py  test_chunking.py  test_engine.py  test_github_store.py  test_indexer.py  test_models.py  test_permissions.py  test_rate_limiter.py  test_sessions.py  test_skills_loader.py  test_skills_registry.py
tools/: learning_tools.py  memory_tools.py  skill_tools.py
utils/: chunking.py  permissions.py  rate_limiter.py
